==> vedderb/vesc_bms_fw/ChibiOS_20.3.4/community/os/hal/ports/GD/GD32VF103/I2C/hal_i2c_lld.c <==
#include "hal.h"
#define I2C0_RX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C0_RX_DMA_STREAM,                        \
                       GD32_I2C0_RX_DMA_CHN)
#define I2C0_TX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C0_TX_DMA_STREAM,                        \
                       GD32_I2C0_TX_DMA_CHN)
#define I2C1_RX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C1_RX_DMA_STREAM,                        \
                       GD32_I2C1_RX_DMA_CHN)
#define I2C1_TX_DMA_CHANNEL                                                 \
  GD32_DMA_GETCHANNEL(GD32_I2C_I2C1_TX_DMA_STREAM,                        \
                       GD32_I2C1_TX_DMA_CHN)
#define I2C_EV5_MASTER_MODE_SELECT                                          \
  ((uint32_t)(((I2C_STAT1_MASTER | I2C_STAT1_I2CBSY) << 16) | I2C_STAT0_SBSEND))
#define I2C_EV5_MASTER_MODE_SELECT_NO_BUSY                                  \
  ((uint32_t)((I2C_STAT1_MASTER << 16) | I2C_STAT0_SBSEND))
#define I2C_EV6_MASTER_TRA_MODE_SELECTED                                    \
  ((uint32_t)(((I2C_STAT1_MASTER | I2C_STAT1_I2CBSY | I2C_STAT1_TR) << 16) |          \
              I2C_STAT0_ADDSEND | I2C_STAT0_TBE))
#define I2C_EV6_MASTER_REC_MODE_SELECTED                                    \
  ((uint32_t)(((I2C_STAT1_MASTER | I2C_STAT1_I2CBSY)<< 16) | I2C_STAT0_ADDSEND))

void i2c_lld_init(void) {

#if GD32_I2C_USE_I2C0
  i2cObjectInit(&I2CD1);
  I2CD1.thread = NULL;
  I2CD1.i2c    = I2C0;
  I2CD1.dmarx  = NULL;
  I2CD1.dmatx  = NULL;
#endif /* GD32_I2C_USE_I2C0 */

#if GD32_I2C_USE_I2C1
  i2cObjectInit(&I2CD2);
  I2CD2.thread = NULL;
  I2CD2.i2c    = I2C1;
  I2CD2.dmarx  = NULL;
  I2CD2.dmatx  = NULL;
#endif /* GD32_I2C_USE_I2C1 */
}

void i2c_lld_start(I2CDriver *i2cp) {
  I2C_TypeDef *dp = i2cp->i2c;

  /* If in stopped state then enables the I2C and DMA clocks.*/
  if (i2cp->state == I2C_STOP) {

    i2cp->txdmamode = GD32_DMA_CTL_PWIDTH_BYTE | GD32_DMA_CTL_MWIDTH_BYTE |
                      GD32_DMA_CTL_MNAGA       | 
                      GD32_DMA_CTL_ERRIE       | GD32_DMA_CTL_FTFIE |
                      GD32_DMA_CTL_DIR_M2P;
    i2cp->rxdmamode = GD32_DMA_CTL_PWIDTH_BYTE | GD32_DMA_CTL_MWIDTH_BYTE |
                      GD32_DMA_CTL_MNAGA       | 
                      GD32_DMA_CTL_ERRIE       | GD32_DMA_CTL_FTFIE |
                      GD32_DMA_CTL_DIR_P2M;

#if GD32_I2C_USE_I2C0
    if (&I2CD1 == i2cp) {
      rcuResetI2C0();

      i2cp->dmarx = dmaStreamAllocI(GD32_I2C_I2C0_RX_DMA_STREAM,
                                    GD32_I2C_I2C0_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_rx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmarx != NULL, "unable to allocate stream");
      i2cp->dmatx = dmaStreamAllocI(GD32_I2C_I2C0_TX_DMA_STREAM,
                                    GD32_I2C_I2C0_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_tx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmatx != NULL, "unable to allocate stream");

      rcuEnableI2C0(true);
      eclicEnableVector(I2C0_EV_IRQn, GD32_I2C_I2C0_IRQ_PRIORITY, GD32_I2C_I2C0_IRQ_TRIGGER);
      eclicEnableVector(I2C0_ER_IRQn, GD32_I2C_I2C0_IRQ_PRIORITY, GD32_I2C_I2C0_IRQ_TRIGGER);

      i2cp->rxdmamode |= GD32_DMA_CTL_CHSEL(I2C0_RX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C0_DMA_PRIORITY);
      i2cp->txdmamode |= GD32_DMA_CTL_CHSEL(I2C0_TX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C0_DMA_PRIORITY);
    }
#endif /* GD32_I2C_USE_I2C0 */

#if GD32_I2C_USE_I2C1
    if (&I2CD2 == i2cp) {
      rcuResetI2C1();

      i2cp->dmarx = dmaStreamAllocI(GD32_I2C_I2C1_RX_DMA_STREAM,
                                    GD32_I2C_I2C1_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_rx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmarx != NULL, "unable to allocate stream");
      i2cp->dmatx = dmaStreamAllocI(GD32_I2C_I2C1_TX_DMA_STREAM,
                                    GD32_I2C_I2C1_IRQ_PRIORITY,
                                    (gd32_dmaisr_t)i2c_lld_serve_tx_end_irq,
                                    (void *)i2cp);
      osalDbgAssert(i2cp->dmatx != NULL, "unable to allocate stream");

      rcuEnableI2C1(true);
      eclicEnableVector(I2C0_EV_IRQn, GD32_I2C_I2C1_IRQ_PRIORITY, GD32_I2C_I2C1_IRQ_TRIGGER);
      eclicEnableVector(I2C0_ER_IRQn, GD32_I2C_I2C1_IRQ_PRIORITY, GD32_I2C_I2C1_IRQ_TRIGGER);

      i2cp->rxdmamode |= GD32_DMA_CTL_CHSEL(I2C1_RX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C1_DMA_PRIORITY);
      i2cp->txdmamode |= GD32_DMA_CTL_CHSEL(I2C1_TX_DMA_CHANNEL) |
                       GD32_DMA_CTL_PRIO(GD32_I2C_I2C1_DMA_PRIORITY);
    }
#endif /* GD32_I2C_USE_I2C1 */
  }

  /* I2C registers pointed by the DMA.*/
  dmaStreamSetPeripheral(i2cp->dmarx, &dp->DATA);
  dmaStreamSetPeripheral(i2cp->dmatx, &dp->DATA);

  /* Reset i2c peripheral.*/
  dp->CTL0 = I2C_CTL0_SRESET;
  dp->CTL0 = 0;
  dp->CTL1 = I2C_CTL1_ERRIE | I2C_CTL1_DMAON;
  /* Setup I2C parameters.*/
  i2c_lld_set_clock(i2cp);
  i2c_lld_set_opmode(i2cp);

  /* Ready to go.*/
  dp->CTL0 |= I2C_CTL0_I2CEN;
}

void i2c_lld_stop(I2CDriver *i2cp) {

  /* If not in stopped state then disables the I2C clock.*/
  if (i2cp->state != I2C_STOP) {

    /* I2C disable.*/
    i2c_lld_abort_operation(i2cp);
    dmaStreamFreeI(i2cp->dmatx);
    dmaStreamFreeI(i2cp->dmarx);
    i2cp->dmatx = NULL;
    i2cp->dmarx = NULL;

#if GD32_I2C_USE_I2C0
    if (&I2CD1 == i2cp) {
      eclicDisableVector(I2C0_EV_IRQn);
      eclicDisableVector(I2C0_ER_IRQn);
      rcuDisableI2C0();
    }
#endif

#if GD32_I2C_USE_I2C1
    if (&I2CD2 == i2cp) {
      eclicDisableVector(I2C1_EV_IRQn);
      eclicDisableVector(I2C1_ER_IRQn);
      rcuDisableI2C1();
    }
#endif
  }
}
